# cpp_final_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  vcpkg.json
assets/: GAME.wad  background_music.lua  basic.glsl  basic_frag.glsl  basic_nowarp.glsl  basic_vertex.glsl  child.lua  death_sound.lua  enemy_director.lua  exit.lua  fleshwizard.blend  fleshwizard.lua  menu.lua  observer.lua  particle.lua  particle_creator.lua  particle_host.lua  postprocess.mat  pp_quantize_dither.glsl  signal_test.lua  spell_manager.lua  suzanne.lua  test.lua  test.mat  test0.mat  test1.mat  testmap.wad
include/: audio_instance.hpp  audio_segment.hpp  builtin_particle_shader.h  builtin_pp_shader.h  builtin_text_shader.h  camera.hpp  engine_font.hpp  engine_globals.hpp  event.hpp  game.hpp  game_object.hpp  geom_usertype.hpp  glcommon.hpp  gltexture.hpp  go_usertype.hpp  input.hpp  input_usertype.hpp  ivec2.hpp  ivec3.hpp  lua_usertype_setup.hpp  macroprint.h  map.hpp  material.hpp  mesh.hpp  parse_wad.hpp  particle_system.hpp  pdata_manager.hpp  pdmgr_usertype.hpp  physics.hpp  prtcl_usertype.hpp  resource_manager.hpp  rsmgr_usertype.hpp  shader.hpp  transform.hpp  util.hpp  vdata_usertype.hpp  vec2.hpp  vec3.hpp  vec4.hpp  win_usertype.hpp  (+3 more)
src/: audio_instance.cxx  audio_segment.cxx  camera.cxx  engine_globals.cxx  event.cxx  game.cxx  game_object.cxx  geom_usertype.cxx  gltexture.cxx  go_usertype.cxx  input.cxx  input_usertype.cxx  lua_usertype_setup.cxx  main.cxx  map.cxx  material.cxx  mesh.cxx  parse_wad.cxx  particle_system.cxx  pdata_manager.cxx  pdmgr_usertype.cxx  physics.cxx  prtcl_usertype.cxx  resource_manager.cxx  rsmgr_usertype.cxx  shader.cxx  transform.cxx  util.cxx  vdata_usertype.cxx  vec.cxx  win_usertype.cxx  window.cxx  wkspc_usertype.cxx  workspace.cxx
